--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ ul {
   list-style-type: none;
   padding-left: 0;
   line-height: 2.5rem;
-  padding-top: 12rem;
+  padding-top: 14rem;
 }
 
 nav {
