--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -40,7 +40,7 @@ header, .container {
 .container ul li span {
   color: #AAAAAA;
   position: absolute;
-  left: 5px;
+  left: 13px;
   font-size: 14px;
   background-color: #FFFFFF;
   padding: 5px 0;
